# 21380_IMU

./: .gitignore  .gitmodules  Makefile  README.md  env.mk  platformio.ini  prj.conf  west.yml
arch/NRF52832/: arch.mk  flash.mk
arch/NRF52832/port/: board.h
arch/STM32L476-DISCOVERY/: arch.mk  flash.cfg  flash.mk
boards/: nrf52832_imu.json
boards/arm/nrf52832_imu/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  nrf52832_imu.dts  nrf52832_imu.yaml  nrf52832_imu_defconfig
cfg/: chconf.h  halconf.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/icm42688/: CMakeLists.txt  Kconfig  icm42688.c  icm42688.h  icm42688_reg.h  icm42688_setup.c  icm42688_spi.c  icm42688_spi.h  icm42688_trigger.c
dts/bindings/sensor/: invensense,icm42688.yaml
firmware/: CMakeLists.txt  prj.conf  rtt.conf
firmware/src/: main.c  main.c.bt  main.cpp
firmware/src/bt/: BLE.cpp  BLE.hpp
firmware/src/imu/: IMU.cpp  IMU.hpp  IMU_virtual.cpp
firmware/src/lib/: static_queue.h
firmware/src/sys/: msg.cpp  msg.hpp
firmware/src/term/: term.cpp  term.hpp
scripts/: flash.jlink
scripts/bluetooth/: IMU_connection.py  README.md
src/: main.c  main.c.bak  main.c.imu  main.cpp
zephyr/: CMakeLists.txt  prj.conf
zephyr/boards/arm/nrf52832_imu/: board.cmake  nrf52832_imu.dts  nrf52832_imu.yaml  nrf52832_imu_defconfig
zephyr/drivers/sensor/icm42688/zephyr/: CMakeLists.txt  icm42688_setup.c  icm42688_setup.h
zephyr/dts/bindings/sensor/: invensense,icm42688.yaml
